# talks

./: .gitignore  README.md  devbox.json  flake.nix  package.json  shell.nix
.direnv/: flake-profile-4-link
Novencia/: how-to-meetup.html  how-to-meetup.md
Novencia/assets/: novencia.css
cppfrug/: cppfrug-52.html  logo.html  obs-c++frug.json
cppfrug/intro/: cppfrug-52.html  cppfrug-53.html  cppfrug-53.md  cppfrug-54.html  cppfrug-54.md  cppfrug-55.html  cppfrug-55.md  cppfrug-56.html  cppfrug-56.md  cppfrug-57.html  cppfrug-57.md  cppfrug-58.html  (+13 more)
cppfrug/talks/expression_templates/: CMakeLists.txt  README.md
cppfrug/talks/expression_templates/CLoop/: CMakeLists.txt  main.cpp
cppfrug/talks/expression_templates/ConceptExpressions_1/: CMakeLists.txt  ConceptExpressions_1.h  main.cpp
cppfrug/talks/expression_templates/ConceptExpressions_2/: Array.h  CMakeLists.txt  CommonVisitors.h  Concepts.h  Evaluator.h  Expressions.h  Streamer.h  Visitor.h  main.cpp
cppfrug/talks/expression_templates/ConceptSample/: CMakeLists.txt  GccBug.cpp  main.cpp
cppfrug/talks/expression_templates/Metaclass/: CMakeLists.txt  main.cpp
cppfrug/talks/expression_templates/ObjectOperator/: CMakeLists.txt  ObjectOperator.cpp  ObjectOperator.h  main.cpp
cppfrug/talks/expression_templates/TemplateExpressions_1/: CMakeLists.txt  TemplateExpressions_1.h  main.cpp
cppfrug/talks/expression_templates/TemplateExpressions_2/: CMakeLists.txt  TemplateExpressions_2.h  main.cpp
cppfrug/talks/expression_templates/VirtualObject/: CMakeLists.txt  VirtualObject.cpp  VirtualObject.h  main.cpp
(+12 files in other folders)
